ltp: allow compiling with or without aio support

--- a/ltp/Kconfig
+++ b/ltp/Kconfig
@@ -17,6 +17,10 @@ config LTP_NEW_SRCDIR
        srcdir "Source directory"
        default "ltp-full-*"
 
+config LTP_NEW_AIO
+       bool "Enable aio test cases"
+       build_select LIBAIO
+
 endif
 
 endmenu
